tests/render/snapshots/render__migrated_v1_trace__rm_file_build_stripped.snap
---
source: tests/migrated_v1_trace.rs
expression: normalised
---
Trace

                                        command │ rm foo
                                         parser │ gnu  flags permute
                                          facts │ :opencode/agent "build"
  24: (rule "rm"                                │
        (when (and (or                          │
                    (flag "r")                  │
                    (flag "recursive"))         │
                   …)                           │
          (deny                                 │ → :deny "Recursive deletion from root"
           "Recursive deletion from root")))    │
                                                │
  29: (rule "rm"                                │
        (when (and                              │
               (build-mode                      │ build-mode → yes
                (or                             │
                 (fact?                         │ no
                  [:claude-code/permission-mode │
                   "acceptEdits"])              │
                 (fact? [:opencode/agent        │ yes
                         "build"])))            │
               (or (flag "r")                   │
                   (flag "recursive")))         │
          <if-effect>))                         │
                                                │
  37: (rule "rm"                                │
        (when (build-mode                       │ build-mode → yes
               (or                              │
                (fact?                          │ no
                 [:claude-code/permission-mode  │
                  "acceptEdits"])               │
                (fact? [:opencode/agent         │ yes
                        "build"])))             │
          (allow                                │ → :allow "Non-recursive delete is allowed"
           "Non-recursive delete is allowed"))) │

Result

  rm foo

  → :allow "Non-recursive delete is allowed"

  config: <config-path>
