tests/render/snapshots/render__migrated_v1_trace__rm_file_no_context_stripped.snap
---
source: tests/migrated_v1_trace.rs
expression: normalised
---
Trace

                                        command │ rm foo
                                         parser │ gnu  flags permute
  24: (rule "rm"                                │
        (when (and (or                          │
                    (flag "r")                  │
                    (flag "recursive"))         │
                   …)                           │
          (deny                                 │ → :deny "Recursive deletion from root"
           "Recursive deletion from root")))    │
                                                │
  29: (rule "rm"                                │
        (when (and                              │
               (build-mode                      │ build-mode → no
                (or                             │
                 (fact?                         │ no
                  [:claude-code/permission-mode │
                   "acceptEdits"])              │
                 (fact? [:opencode/agent        │ no
                         "build"])))            │
               …)                               │
          <if-effect>))                         │
                                                │
  37: (rule "rm"                                │
        (when (build-mode                       │ build-mode → no
               (or                              │
                (fact?                          │ no
                 [:claude-code/permission-mode  │
                  "acceptEdits"])               │
                (fact? [:opencode/agent         │ no
                        "build"])))             │
          (allow                                │ → :allow "Non-recursive delete is allowed"
           "Non-recursive delete is allowed"))) │
                               No matching rule │ → :ask (default)

Result

  rm foo

  → :ask "Rules for `rm` exist but context or arguments did not match any patterns"

  config: <config-path>
