tests/render/snapshots/render__migrated_v1_trace__rm_recursive_build_other_raw.snap
---
source: tests/migrated_v1_trace.rs
expression: normalised
---
[1mTrace[0m

                                                    [2mcommand[0m [2m│[0m [1mrm -r /other/path[0m
                                                     [2mparser[0m [2m│[0m gnu  flags permute
                                                      [2mfacts[0m [2m│[0m [94m:opencode/agent[0m [32m"build"[0m
  [2m24: [0m[2m([0m[34mrule[0m [32m"rm"[0m                                            [2m│[0m
        [2m([0m[34mwhen[0m [2m([0mand [2m([0mor [2m([0mflag [32m"r"[0m[2m)[0m                           [2m│[0m
                       [2m…[0m[2m)[0m                                   [2m│[0m
                   [2m([0m[34manywhere[0m [32m"/"[0m[2m)[0m[2m)[0m                          [2m│[0m
          [2m([0m[2mdeny[0m                                             [2m│[0m [2m[0m[2m→[0m [1;31m:deny[0m [32m"Recursive deletion from root"[0m
           [2m"Recursive deletion from root"[0m[2m)[0m[2m)[0m[2m)[0m                [2m│[0m
                                                            [2m│[0m
  [2m29: [0m[2m([0m[34mrule[0m [32m"rm"[0m                                            [2m│[0m
        [2m([0m[34mwhen[0m [2m([0mand                                          [2m│[0m
               [2m([0mbuild-mode                                  [2m│[0m [2mbuild-mode [0m[2m→[0m [1;32myes[0m
                [2m([0mor                                         [2m│[0m
                 [2m([0mfact?                                     [2m│[0m [33mno[0m
                  [2m[[0m[94m:claude-code/permission-mode[0m             [2m│[0m
                   [32m"acceptEdits"[0m[2m][0m[2m)[0m                          [2m│[0m
                 [2m([0mfact? [2m[[0m[94m:opencode/agent[0m                    [2m│[0m [1;32myes[0m
                         [32m"build"[0m[2m][0m[2m)[0m[2m)[0m[2m)[0m                        [2m│[0m
               [2m([0mor [2m([0mflag [32m"r"[0m[2m)[0m                               [2m│[0m
                   [2m…[0m[2m)[0m[2m)[0m                                      [2m│[0m
          [2m([0m[34mif[0m [2m([0m[34manywhere[0m [2m([0mregex                              [2m│[0m
                         [32m"^/tmp/.*"[0m[2m)[0m[2m)[0m                       [2m│[0m
              [2m…[0m                                             [2m│[0m
            [2m([0mask                                            [2m│[0m [2m[0m[2m→[0m [1;33m:ask[0m [32m"Recursive deletion requires confirmation"[0m
             [32m"Recursive deletion requires confirmation"[0m[2m)[0m[2m)[0m[2m)[0m[2m)[0m [2m│[0m
                                                            [2m│[0m
  [2m37: [0m[2m([0m[34mrule[0m [32m"rm"[0m                                            [2m│[0m
        [2m([0m[34mwhen[0m [2m([0mbuild-mode                                   [2m│[0m [2mbuild-mode [0m[2m→[0m [1;32myes[0m
               [2m([0mor                                          [2m│[0m
                [2m([0mfact?                                      [2m│[0m [33mno[0m
                 [2m[[0m[94m:claude-code/permission-mode[0m              [2m│[0m
                  [32m"acceptEdits"[0m[2m][0m[2m)[0m                           [2m│[0m
                [2m([0mfact? [2m[[0m[94m:opencode/agent[0m                     [2m│[0m [1;32myes[0m
                        [32m"build"[0m[2m][0m[2m)[0m[2m)[0m[2m)[0m                         [2m│[0m
          [2m([0mallow                                            [2m│[0m [2m[0m[2m→[0m [1;32m:allow[0m [32m"Non-recursive delete is allowed"[0m
           [32m"Non-recursive delete is allowed"[0m[2m)[0m[2m)[0m[2m)[0m             [2m│[0m

[1mResult[0m

  [4;33mrm -r /other/path[0m

  [2m→[0m [1;33m:ask[0m [32m"Recursive deletion requires confirmation"[0m

  config: <config-path>
