tests/render/snapshots/render__migrated_v1_trace__rm_recursive_build_other_stripped.snap
---
source: tests/migrated_v1_trace.rs
expression: normalised
---
Trace

                                                    command │ rm -r /other/path
                                                     parser │ gnu  flags permute
                                                      facts │ :opencode/agent "build"
  24: (rule "rm"                                            │
        (when (and (or (flag "r")                           │
                       …)                                   │
                   (anywhere "/"))                          │
          (deny                                             │ → :deny "Recursive deletion from root"
           "Recursive deletion from root")))                │
                                                            │
  29: (rule "rm"                                            │
        (when (and                                          │
               (build-mode                                  │ build-mode → yes
                (or                                         │
                 (fact?                                     │ no
                  [:claude-code/permission-mode             │
                   "acceptEdits"])                          │
                 (fact? [:opencode/agent                    │ yes
                         "build"])))                        │
               (or (flag "r")                               │
                   …))                                      │
          (if (anywhere (regex                              │
                         "^/tmp/.*"))                       │
              …                                             │
            (ask                                            │ → :ask "Recursive deletion requires confirmation"
             "Recursive deletion requires confirmation")))) │
                                                            │
  37: (rule "rm"                                            │
        (when (build-mode                                   │ build-mode → yes
               (or                                          │
                (fact?                                      │ no
                 [:claude-code/permission-mode              │
                  "acceptEdits"])                           │
                (fact? [:opencode/agent                     │ yes
                        "build"])))                         │
          (allow                                            │ → :allow "Non-recursive delete is allowed"
           "Non-recursive delete is allowed")))             │

Result

  rm -r /other/path

  → :ask "Recursive deletion requires confirmation"

  config: <config-path>
