tests/render/snapshots/render__migrated_v1_trace__rm_recursive_build_tmp_stripped.snap
---
source: tests/migrated_v1_trace.rs
expression: normalised
---
Trace

                                        command │ rm -r /tmp/foo
                                         parser │ gnu  flags permute
                                          facts │ :opencode/agent "build"
  24: (rule "rm"                                │
        (when (and (or (flag "r")               │
                       …)                       │
                   (anywhere "/"))              │
          (deny                                 │ → :deny "Recursive deletion from root"
           "Recursive deletion from root")))    │
                                                │
  29: (rule "rm"                                │
        (when (and                              │
               (build-mode                      │ build-mode → yes
                (or                             │
                 (fact?                         │ no
                  [:claude-code/permission-mode │
                   "acceptEdits"])              │
                 (fact? [:opencode/agent        │ yes
                         "build"])))            │
               (or (flag "r")                   │
                   …))                          │
          (if (anywhere (regex                  │
                         "^/tmp/.*"))           │
              (allow                            │ → :allow "Deleting tmp files is allowed"
               "Deleting tmp files is allowed") │
            …)))                                │
                                                │
  37: (rule "rm"                                │
        (when (build-mode                       │ build-mode → yes
               (or                              │
                (fact?                          │ no
                 [:claude-code/permission-mode  │
                  "acceptEdits"])               │
                (fact? [:opencode/agent         │ yes
                        "build"])))             │
          (allow                                │ → :allow "Non-recursive delete is allowed"
           "Non-recursive delete is allowed"))) │

Result

  rm -r /tmp/foo

  → :allow "Deleting tmp files is allowed; Non-recursive delete is allowed"

  config: <config-path>
