tests/render/snapshots/render__migrated_v1_trace__timeout_echo_raw.snap
---
source: tests/migrated_v1_trace.rs
expression: normalised
---

[1mTrace[0m

                                 [2mcommand[0m [2m│[0m [1mtimeout 30 echo hello[0m
                                  [2mparser[0m [2m│[0m gnu  flags posix  parameters (-k -s)  rest #cmd
  [2m110: [0m[2m([0m[34mrule[0m [32m"timeout"[0m                   [2m│[0m
         [2m([0m[34mwhen[0m [2m([0m[34mpositional[0m [2m([0mregex        [2m│[0m
                            [32m"^[0-9]+$"[0m[2m)[0m[2m)[0m [2m│[0m
           [2m<arg-pattern>[0m[2m)[0m[2m)[0m               [2m│[0m
                        [3;33mNo matching rule[0m [2m│[0m [2m[0m[2m→[0m [1;33m:ask[0m (default)

[1mResult[0m

  [4;33mtimeout 30 echo hello[0m

  [2m→[0m [1;33m:ask[0m [32m"Rules for `timeout` exist but context or arguments did not match any patterns"[0m

  config: <config-path>
