tests/render/snapshots/render__migrated_v1_trace__unknown_cmd_raw.snap
---
source: tests/migrated_v1_trace.rs
expression: normalised
---

[1mTrace[0m

  [3;33mNo matching rule[0m [2m│[0m [2m[0m[2m→[0m [1;33m:ask[0m (default)

[1mResult[0m

  [4;33munknown-cmd arg[0m

  [2m→[0m [1;33m:ask[0m [32m"No rule for command `unknown-cmd`"[0m

  config: <config-path>
